2006-08-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.c: (about_me_load_photo), (about_me_update_photo):
	  - fix build with the new libebook API (Closes: #348821)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.desktop.in.in: don't list the Application category, 
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-06-11  Rodrigo Moya <rodrigo@novell.com>

	Fixes #344468

	* gnome-about-me-password.c: removed redundant headers.

2006-05-26  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.glade: fix label alignment (Closes: #343056)

2006-05-26  Rodrigo Moya <rodrigo@novell.com>

	Fixes #324971

	* gnome-about-me-password.c (passdlg_spawn_passwd): fixed typo.

2006-01-21  Diego Gonzalez   <diego@pemas.net>

	* gnome-about-me.c (about_me_foucs_out): fix crash 317315.

2006-01-21  Diego Gonzalez   <diego@pemas.net>

	* gnome-about-me.glade: don't accept tabs in the address fields to
	  preserve the tab navigation on the dialog, as suggested by
	  Sebastien Bacher in bug 317468.

2005-11-21  Matthias Clasen  <mclasen@redhat.com>

	* gnome-about-me.c: Add a preview to the filechooser used for
	selecting an image, using a GnomeThumbnailFactory.

2005-08-16  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.glade: revert the part of the previous patch that
	  modified the UI, as we are in UI freeze.

2005-08-15 Olaf Heiring <olh@suse.de>

	* gnome-about-me-password.c (read_everything): use integer to avoid
	  comparison being always true due to limited range.

2005-08-15 Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (update_password): use "wrapped" instead
	  of "one" to handler the case where the passwd command finds the
	  password wrapped. Use a long delay period.

	Patch by Jaap Hatsima. 

2005-08-14  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* gnome-about-me-password.c (update_password): Replace "passwod is
	to simple" with "Password is too simple".
	
